--- a/puddle/core/templates/core/base.html
+++ b/puddle/core/templates/core/base.html
@@ -9,7 +9,7 @@
     </head>
 
     <body>
-        <nav class="px-6 py-6 flex justify-between items-center border-b border-gray-200">
+        <nav class="py-6 px-6 flex justify-between items-center border-b border-gray-200">
             <a href="/" class="text-xl font-semibold">Puddle</a>
 
             <div class="space-x-6">
